clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdio__fputs.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdio/fputs.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[11] = ConstArray { ty: Array { element_type: Named("s8i"), size: 11 }, elts: Str("via-fputs\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global stdout : rec__IO_FILE* [external, default, align 8, dso_local]

fn fputs(%arg0: s8i*, %arg1: rec__IO_FILE*) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @.str : s8i[11]*
        %3 = cast(array_to_ptrdecay) %2 : s8i*
        %4 = get_global @stdout : rec__IO_FILE**
        %5 = load %4 : rec__IO_FILE*, align 8
        %6 = call @fputs(%3, %5) : s32i [all]
        %7 = const 0 : s32i
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
