clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdio__fseek_ftell.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdio/fseek_ftell.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[7] = ConstArray { ty: Array { element_type: Named("s8i"), size: 7 }, elts: Str("abcdef"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[11] = ConstArray { ty: Array { element_type: Named("s8i"), size: 11 }, elts: Str("%ld %c %c\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn tmpfile() -> rec__IO_FILE* [external, c];
fn fputs(%arg0: s8i*, %arg1: rec__IO_FILE*) -> s32i [external, c];
fn fseek(%arg0: rec__IO_FILE*, %arg1: s64i, %arg2: s32i) -> s32i [external, c];
fn ftell(%arg0: rec__IO_FILE*) -> s64i [external, c];
fn fgetc(%arg0: rec__IO_FILE*) -> s32i [external, c];
fn rewind(%arg0: rec__IO_FILE*) -> void [external, c];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec__IO_FILE*, "f", align 8
        %2 = alloca s64i, "pos", align 8
        %3 = alloca s32i, "c", align 4
        %4 = alloca s32i, "d", align 4
        %5 = const 0 : s32i
        store %5, %0
        %6 = call @tmpfile() : rec__IO_FILE* [all]
        store %6, %1, align 8
        %7 = get_global @.str : s8i[7]*
        %8 = cast(array_to_ptrdecay) %7 : s8i*
        %9 = load %1 : rec__IO_FILE*, align 8
        %10 = call @fputs(%8, %9) : s32i [all]
        %11 = load %1 : rec__IO_FILE*, align 8
        %12 = const 2 : s64i
        %13 = const 0 : s32i
        %14 = call @fseek(%11, %12, %13) : s32i [all]
        %15 = load %1 : rec__IO_FILE*, align 8
        %16 = call @ftell(%15) : s64i [all]
        store %16, %2, align 8
        %17 = load %1 : rec__IO_FILE*, align 8
        %18 = call @fgetc(%17) : s32i [all]
        store %18, %3, align 4
        %19 = load %1 : rec__IO_FILE*, align 8
        call @rewind(%19) [all]
        %20 = load %1 : rec__IO_FILE*, align 8
        %21 = call @fgetc(%20) : s32i [all]
        store %21, %4, align 4
        %22 = get_global @printf : (s8i*, ...) -> s32i*
        %23 = get_global @.str.1 : s8i[11]*
        %24 = cast(array_to_ptrdecay) %23 : s8i*
        %25 = load %2 : s64i, align 8
        %26 = load %3 : s32i, align 4
        %27 = load %4 : s32i, align 4
        %28 = call @printf(%24, %25, %26, %27) : s32i [all]
        %29 = const 0 : s32i
        store %29, %0
        %30 = load %0 : s32i
        return %30
}
