clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdio__putchar.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdio/putchar.c" (c, x86_64-unknown-linux-gnu)
fn putchar(%arg0: s32i) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 65 : s32i
        %3 = call @putchar(%2) : s32i [all]
        %4 = const 10 : s32i
        %5 = call @putchar(%4) : s32i [all]
        %6 = const 0 : s32i
        store %6, %0
        %7 = load %0 : s32i
        return %7
}
