clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdio__puts.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdio/puts.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = "hello" [cir_private, default, align 1, dso_local, constant]

fn puts(%arg0: s8i*) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @.str : s8i[6]*
    %3 = cast(array_to_ptrdecay) %2 : s8i*
    %4 = call @puts(%3) : s32i [all]
    %5 = const 0 : s32i
    store %5, %0
    %6 = load %0 : s32i
    return %6
}
