clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdio__snprintf.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdio/snprintf.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[3] = ConstArray { ty: Array { element_type: Named("s8i"), size: 3 }, elts: Str("%d"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn snprintf(%arg0: s8i*, %arg1: u64i, %arg2: s8i*, ...) -> s32i [external, c, nothrow];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i[8], "b", align 1
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @snprintf : (s8i*, u64i, s8i*, ...) -> s32i*
        %4 = cast(array_to_ptrdecay) %1 : s8i*
        %5 = const 8 : u64i
        %6 = get_global @.str : s8i[3]*
        %7 = cast(array_to_ptrdecay) %6 : s8i*
        %8 = const 123456 : s32i
        %9 = call @snprintf(%4, %5, %7, %8) : s32i [all]
        %10 = cast(array_to_ptrdecay) %1 : s8i*
        %11 = call @puts(%10) : s32i [all]
        %12 = const 0 : s32i
        store %12, %0
        %13 = load %0 : s32i
        return %13
}
